fix: Overflow hidden only on single photo

--- a/photos/gallery/static/main.styl
+++ b/photos/gallery/static/main.styl
@@ -12,7 +12,6 @@ h1, h2, h3, h4
 .wrapper
   height: 100%
   position: relative
-  overflow: hidden
 
   .image
     width: 100%
@@ -35,6 +34,7 @@ h1, h2, h3, h4
       h1
         font-size: 6em
         margin-bottom: 0
+
     &.hidden
       bottom: -20em
       opacity: 0
@@ -42,6 +42,10 @@ h1, h2, h3, h4
       -moz-transition: all 2s ease-in
       -o-transition: all 2s ease-in
       transition: all 2s ease-in
+
+  &.photo-details
+    overflow: hidden
+
 
 .text-center
   text-align: center
